--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,4 +1,10 @@
 <html>
-	<p>It works!</p>
-	<p>Git commit that shit</p>
+	<head>
+		<title>HB DjangoGirls</title>
+	</head>
+
+	<body>
+		<p>It works!</p>
+		<p>Git commit that shit</p>
+	</body>
 </html>
